<resources>
    <string name="app_name">HGCInfo</string>
    <string name="title_teams">Teams</string>
    <string name="title_favs">Favourite</string>
    <string name="title_settings">Settings</string>
    <string name="refresh_teams">Refresh teams</string>
    <string name="region">Region</string>
    <string name="eu">Europe</string>
    <string name="na">North America</string>
    <string name="kr">South Korea</string>
    <string name="ch">China</string>
    <string name="tw">Taiwan</string>
    <string name="anz">Australia NZ</string>
    <string name="sea">Southeast Asia</string>
    <string name="la">Latin America</string>
    <string name="action_favorites">Favourite</string>
    <string name="pref_default_region">Default region</string>
    <string name="team_with_no_member">This team has no members.</string>
</resources>
